<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">便利贴</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_within_week">最近一周</string>
    <string name="action_within_month">最近一月</string>
    <string name="action_all">查看全部</string>
    <string name="action_about">关于</string>
    <string name="btn_add">+</string>
    <string name="btn_confirm">√</string>
    <string name="btn_cancel">×</string>
    <string name="btn_back">←</string>
    <string name="ed_title">标题</string>
    <string name="ed_content">内容</string>
    <string name="activity_title">新建便利贴</string>
    <string name="activity_details_title">便利贴</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="title_activity_search">SearchActivity</string>

</resources>