<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"  
    tools:context="com.lijinfeng.stickynote.activity.MainActivity" 
    android:background="#FFFFFF">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#01BBD4"
        android:paddingLeft="10dp"
    	android:paddingRight="10dp"
        android:orientation="horizontal"
        >
        
        <Button
	        android:id="@+id/btn_cancel"
	        style="@style/btn_cancel_qq"
	        android:layout_weight="1"
	        android:layout_gravity="center_vertical"
	        />
        <TextView 
            android:id="@+id/activity_title"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="4.5"
            android:paddingTop="6dp"
            android:gravity="center"
            android:text="@string/activity_title"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:background="#01BBD4"
            />
        <Button
	        android:id="@+id/btn_confirm"
	        style="@style/btn_confirm_qq"
	        android:layout_weight="1"
	        android:layout_gravity="center_vertical"
	        />
        
    </LinearLayout>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        >
        <EditText 
            android:id="@+id/ed_title"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:cursorVisible="true"
            android:background="@null"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textColor="#000000"
            android:hint="@string/ed_title"
            />
        <TextView 
            android:id="@+id/divier"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#DAD8D8"/>
        <EditText 
            android:id="@+id/ed_content"
            android:layout_width="fill_parent"
            android:layout_height="260dp"
            android:inputType="textMultiLine"
            android:gravity="left|top"
            android:paddingTop="16dp"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/cursor_color"
            android:singleLine="false"
            android:background="@null"
            android:textColor="#000000"
            android:hint="@string/ed_content"
            />
    </LinearLayout>
    
</RelativeLayout>
